# debby-lib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  PREFIX  README.md  build-windows.cmd  build.sh  library.cmake  update.sh
2ndparty/: CMakeLists.txt  download.sh
cmake/: RocksDB.cmake  libmdbx.cmake
include/pfs/debby/: affinity_traits.hpp  backend_enum.hpp  basic_database.hpp  basic_result.hpp  basic_statement.hpp  data_definition.hpp  error.hpp  expected_result.hpp  exports.hpp  filesystem_path_affinity.hpp  in_memory.hpp  keyvalue_database.hpp  lmdb.hpp  mdbx.hpp  namespace.hpp  psql.hpp  relational_database.hpp  result.hpp  rocksdb.hpp  settings.hpp  sqlite3.hpp  statement.hpp  time_affinity.hpp  unified_value.hpp  universal_id_affinity.hpp
include/pfs/debby/backend/: assigner.hpp  cast_traits_common.hpp  path_traits_common.hpp  sha256_traits_common.hpp  time_point_traits_common.hpp  uuid_traits_common.hpp
include/pfs/debby/backend/in_memory/: associative_container.hpp  database.hpp  map.hpp  unordered_map.hpp
include/pfs/debby/backend/libmdbx/: database.hpp
include/pfs/debby/backend/lmdb/: database.hpp
include/pfs/debby/backend/psql/: affinity_traits.hpp  cast_traits.hpp  database.hpp  path_traits.hpp  result.hpp  sha256_traits.hpp  statement.hpp  time_point_traits.hpp  uuid_traits.hpp
include/pfs/debby/backend/rocksdb/: database.hpp
include/pfs/debby/backend/sqlite3/: affinity_traits.hpp  cast_traits.hpp  database.hpp  input_record.hpp  path_traits.hpp  result.hpp  sha256_traits.hpp  statement.hpp  time_point_traits.hpp  uuid_traits.hpp
include/pfs/debby/rocksdb/: database.hpp
include/pfs/debby/sqlite3/: affinity.hpp  affinity_traits.hpp  cast_traits.hpp  database.hpp  input_record.hpp  result.hpp  statement.hpp  time_point_traits.hpp  uuid_traits.hpp
scripts/: build-linux-all-backends.sh  build-linux.sh  build-windows-all-backends.cmd  build.cxx11-RocksDB-noexcept.sh  build.cxx11-RocksDB-with-exceptions.sh  build.cxx11-RocksDB.cmd  build.cxx11-RocksDB.sh  build.cxx11-all.sh  build.cxx11-default.sh  build.cxx11.cmd  build.cxx11.sh
src/: data_definition.cpp  database_common.hpp  error.cpp  fixed_packer.hpp  keyvalue_database_common.hpp  keyvalue_database_impl.hpp  keyvalue_relational_database_impl.hpp  kv_common.hpp  relational_database_common.hpp
src/in_memory/: associative_container_impl.hpp  database.cpp  keyvalue_database.cpp  map.cpp  unordered_map.cpp
src/libmdbx/: README.md  database.cpp  keyvalue_database.cpp
src/libmdbx/lib/: CMakeLists.txt
src/lmdb/: database.cpp  keyvalue_database.cpp
src/psql/: data_definition.cpp  database.cpp  keyvalue_database.cpp  oid_enum.hpp  relational_database.cpp  relational_database_impl.hpp  result.cpp  result_impl.hpp  statement.cpp  statement_impl.hpp  utils.hpp
src/rocksdb/: database.cpp  keyvalue_database.cpp
src/sqlite3/: data_definition.cpp  database.cpp  errstr_builder.hpp  keyvalue_database.cpp  relational_database.cpp  relational_database_impl.hpp  result.cpp  result_impl.hpp  statement.cpp  statement_impl.hpp  utils.hpp
tests/: CMakeLists.txt  cached_statement.cpp  cast_traits_common.hpp  data_definition.cpp  database.cpp  keyvalue_database.cpp  psql.cpp  psql_affinity.cpp  psql_cast_traits.cpp  psql_support.hpp  relational_database.cpp  rocksdb_database.cpp  sqlite3_affinity.cpp  sqlite3_cast_traits.cpp  statement.cpp  unified_value.cpp  unordered_map.cpp
